--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div id="front" class="album">
         <div id="title-box">
 
-          <!-- Level 4 'PHARRELL WILLIAMS' Header -->
+          <h2>PHARRELL WILLIAMS</h2
 
           <!-- Level 2 'HAPPY' Header -->
 
